...
    LazyRow(
            modifier =
                    Modifier.fillMaxWidth()
                            .height(56.dp)
                            .background(Color.White)
                            .padding(horizontal = 4.dp)
                            .testTag("editor_default_bottom_bar"),
            horizontalArrangement = Arrangement.spacedBy(2.dp),
            verticalAlignment = Alignment.CenterVertically
    ) {
        item {
            EditorBarButton(
                    onClick = onAddParagraph,
...
    LazyRow(
            modifier =
                    Modifier.fillMaxWidth()
                            .height(56.dp)
                            .background(Color.White)
                            .padding(horizontal = 4.dp)
                            .testTag("editor_formatting_bottom_bar"),
            horizontalArrangement = Arrangement.spacedBy(2.dp),
            verticalAlignment = Alignment.CenterVertically
    ) {
        item {
            EditorBarButton(
                    onClick = { /* Body click */},
...
